--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 						</header>
 						<p>I love to blog, code and sing. This page is for those who are interested in only the 'code' part.</p>
 						<p>If you are not a developer, this portal may not appeal much to you. In that case, you can
-						   find my blogs are <a href="https://sgownblog.com"></a> and <a href="https://www.thecodepost.org"></a>. 
+						   find my blogs are <a href="https://sgownblog.com">SGOwnBlog</a> and <a href="https://www.thecodepost.org">The Code Post</a>. 
 						   Details of my open source projects are below.</p>
 					</section>
 
