--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>I'm Sarthak Ganguly</strong>, a web and desktop developer
+					<h1>I'm <strong>Sarthak Ganguly</strong>, a web and desktop developer
 					and blogger. <br>I sing and make music too.<br />
 					</h1>
 				</div>
