--- a/index.html
+++ b/index.html
@@ -94,13 +94,13 @@
 								<ul class="labeled-icons">
 									<li>
 										<h3 class="icon fa-home"><span class="label">Address</span></h3>
-										1234 Somewhere Rd.<br />
-										Nashville, TN 00000<br />
-										United States
+										260D D.H. Road<br />
+										Kolkata 700008<br />
+										India
 									</li>
 									<li>
 										<h3 class="icon fa-mobile"><span class="label">Phone</span></h3>
-										000-000-0000
+										+91 88280 633 53
 									</li>
 									<li>
 										<h3 class="icon fa-envelope-o"><span class="label">Email</span></h3>
@@ -111,7 +111,7 @@
 						</div>
 					</section>
 
-				-->
+
 
 			</div>
 
@@ -119,13 +119,13 @@
 			<footer id="footer">
 				<div class="inner">
 					<ul class="icons">
-						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="https://www.twitter.com/thecodepost" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
 						<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
 						<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Sarthak Ganguly</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Sarthak Ganguly</li><li>Design: <a href="https:\\www.thecodepost.org">The Code Post</a></li>
 					</ul>
 				</div>
 			</footer>
