--- a/index.html
+++ b/index.html
@@ -110,19 +110,15 @@
 							</div>
 						</div>
 					</section>
-
-
-
 			</div>
 
 		<!-- Footer -->
 			<footer id="footer">
 				<div class="inner">
 					<ul class="icons">
-						<li><a href="https://www.twitter.com/thecodepost" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-						<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+						<li><a href="https://www.twitter.com/thecodepost"><span class="label">Twitter</span></a></li>
+						<li><a href="https://github.com/sarthakganguly"><span class="label">Github</span></a></li>
+						<li><a href="mailto:sganguly@sgownblog.com"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
 						<li>&copy; Sarthak Ganguly</li><li>Design: <a href="https:\\www.thecodepost.org">The Code Post</a></li>
