--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 				<!-- Three -->
 					<section id="three">
 						<h2>Get In Touch</h2>
-						<p>I will be glad to hear from you. Please drop a message/query below. You can also tweet to be directly.</p>
+						<p>I will be glad to hear from you. Please drop a message/query below. You can also <a href="https://www.twitter.com/thecodepost">tweet to me</a> directly.</p>
 						<div class="row">
 							<div class="col-8 col-12-small">
 								<form method="post" action="#">
